tests/paczka1/small_fuzzy/45103963.err
Error in line 1: A535 A456 61,8
Error in line 4: A535 A661 5,5
Error in line 6: A38 A535 87,5
